--- a/drupal/sites/all/themes/checkdesk/assets/css/style.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style.css
@@ -5378,6 +5378,9 @@ div.sensitive-hide {
 #modalContent.modal-report {
   z-index: 950;
 }
+#modalContent.modal-report .modal {
+  background-color: #fbfaf9;
+}
 
 @media all and (min-height: 40em) {
   #modalContent.modal-report {
@@ -7119,6 +7122,7 @@ form.ife .form-type-select select {
   float: left;
   margin-right: 2.12766%;
   display: inline;
+  padding: 0l;
 }
 form#user-login label {
   display: block;
