--- a/drupal/sites/all/themes/checkdesk/assets/scss/_forms.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/scss/_forms.scss
@@ -90,6 +90,7 @@
       select {
         float: $alpha;
         @include span-columns($container-width/2);
+        padding: 0;
       }
     }
   }
